--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Rock-paper-scissors</title>
 </head>
 <body>
-    <script></script>
+    <script src="main.js"></script>
 </body>
 </html>
